--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "autoprefixer": "^10.4.15",
     "esbuild": "^0.19.2",
+    "flowbite": "^1.8.1",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3"
   },
